practice_problems/tables/stylesheet.css
body {

  font-family: Helvetica;
  border: solid black;
  display: inline-block;
  padding-right: 10px;
  padding-left: 10px;
  width: 680px;
}

p {
  font-size: 20px;
}

h1  {
  font-size: 70px;
  margin-top: 0px;
  font-family: Helvetica;
  font-weight: bold;
  margin-bottom: 1px;
}

.serving-size {
  margin-bottom: 1px;
}

h2 {
  font-weight: normal;
  margin-top: 1px;
  font-size: 35px;
  margin-bottom: 1px;
}

.first_underline {
  margin-top: 3px;
  border: 15px solid black;
}

.second_underline {
  margin-top: 1px;
  border-top: 1px solid black;
}

.third_underline {
  border: 6px solid black;
}

.indented_underline {
  margin-top: 1px;
  border-top: 1px solid black;
  display: block;
  margin-left: 40px;
}

.indent {
  text-indent: 20px;
}

h3 {
  margin-top: 2px;
  font-family: Helvetica;
  font-size: 25px;
  font-weight: normal;
  margin-bottom: 1px;
}

table {
  border-collapse: collapse;
}

th {
  border-bottom: 1px solid black;
  font-size: 25px;
}

tr {
  font-size: 25px;
}

